--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,4 +2,5 @@
 resolver = "2"
 members = [
     "neetcode150/arrays_and_hashing/contains_duplicate",
+    "neetcode150/arrays_and_hashing/valid_anagram",
 ]
