--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,5 @@ resolver = "2"
 members = [
     "neetcode150/arrays_and_hashing/contains_duplicate",
     "neetcode150/arrays_and_hashing/valid_anagram",
+    "neetcode150/arrays_and_hashing/two_sum",
 ]
