--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ members = [
     "neetcode150/arrays_and_hashing/contains_duplicate",
     "neetcode150/arrays_and_hashing/valid_anagram",
     "neetcode150/arrays_and_hashing/two_sum",
+    "neetcode150/arrays_and_hashing/group_anagrams",
 ]
